--- a/module_2_site/css/Mdule2.css
+++ b/module_2_site/css/Mdule2.css
@@ -1,9 +1,168 @@
+*
+{
+  box-sizing: border-box;
+}
+
+div#container {
+  background-color: #00FFFF;
+  position: relative;
+}
+
 h1{
     font-size: 300;
 	text-align: center;
 	font-weight: bold;
+	margin-bottom: 15px;
 }
-body 
+.region
 {
-font-family: sans-serif;
+  height: 30%;
+  width: 30%;
+  font-family: Comic Sans MS;
+  font-size: 15px;
+  position: relative;
+  top: 0%;
+  left:70%;
+  border:1px black solid;
+  text-align: center;
+}
+p
+{
+  border: 1px solid black;
+  background-color: grey;
+  width: 90%;
+  height: 90%px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Comic Sans MS;
+  color: white
+}
+
+.row
+{
+	width: 100%;
+	position: relative;
+}
+/*Desktop Version*/
+@media(min-width: 992px)
+{
+.col-lg-1, 
+.col-lg-2 ,
+.col-lg-3 ,
+.col-lg-4
+{
+	float: left;
+	border: 1px solid red;
+}
+.col-lg-1
+{
+	width: 8.33%;
+}
+.col-lg-2
+{
+	width: 16.66%;
+}
+.col-lg-3
+{
+	width: 25%;
+}
+.col-lg-4
+{
+	width: 33.33%;
+}
+}
+/*Tablet Version*/
+@media(min-width:768px) and (max-width:991px)
+{
+
+.col-md-1, 
+.col-md-2 ,
+.col-md-3 ,
+.col-md-4,
+.col-md-5,
+.col-md-6
+{
+	float: left;
+	border: 1px solid red;
+}
+.col-md-1
+{
+	width: 8.33%;
+
+}
+.col-md-2
+{
+	width: 16.66%;
+}
+.col-md-3
+{
+	width: 25%;
+}
+.col-md-4
+{
+	width: 33.33%;
+}
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+}
+/*Mobile Version*/
+@media(max-width:767px)
+{
+	.col-mn-1,
+	.col-mn-2,
+	.col-mn-3,
+	.col-mn-4,
+	.col-mn-5,
+	.col-mn-6,
+	.col-mn-7,
+	.col-mn-8,
+	.col-mn-9,
+	.col-mn-10,
+	.col-mn-11,
+	.col-mn-12
+	{
+		float: left;
+		border: 1px solid red;
+	}
+  .col-mn-1 {
+    width: 8.33%;
+  }
+  .col-mn-2 {
+    width: 16.66%;
+  }
+  .col-mn-3 {
+    width: 25%;
+  }
+  .col-mn-4 {
+    width: 33.33%;
+  }
+  .col-mn-5 {
+    width: 41.66%;
+  }
+  .col-mn-6 {
+    width: 50%;
+  }
+  .col-mn-7 {
+    width: 58.33%;
+  }
+  .col-mn-8 {
+    width: 66.66%;
+  }
+  .col-mn-9 {
+    width: 74.99%;
+  }
+  .col-mn-10 {
+    width: 83.33%;
+  }
+  .col-mn-11 {
+    width: 91.66%;
+  }
+  .col-mn-12 {
+    width: 100%;
+  }
+
 }
