--- a/module_2_site/css/Mdule2.css
+++ b/module_2_site/css/Mdule2.css
@@ -1,6 +1,9 @@
 *
 {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
 }
 
 div#container {
@@ -28,14 +31,11 @@ h1{
 }
 p
 {
-  border: 1px solid black;
   background-color: grey;
-  width: 90%;
-  height: 90%px;
-  margin-right: auto;
   margin-left: auto;
+  width:90%;
   font-family: Comic Sans MS;
-  color: white
+  color: black;
 }
 
 .row
@@ -52,7 +52,9 @@ p
 .col-lg-4
 {
 	float: left;
-	border: 1px solid red;
+	margin-bottom: 15px;
+	border:1px black solid;
+
 }
 .col-lg-1
 {
@@ -70,6 +72,30 @@ p
 {
 	width: 33.33%;
 }
+ .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
 }
 /*Tablet Version*/
 @media(min-width:768px) and (max-width:991px)
@@ -83,7 +109,8 @@ p
 .col-md-6
 {
 	float: left;
-	border: 1px solid red;
+	margin-bottom: 15px;
+	border:1px black solid;
 }
 .col-md-1
 {
@@ -102,11 +129,30 @@ p
 {
 	width: 33.33%;
 }
-  .col-md-5 {
+  .col-md-5 
+  {
     width: 41.66%;
   }
   .col-md-6 {
     width: 50%;
+  }
+   .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
   }
 }
 /*Mobile Version*/
@@ -126,7 +172,9 @@ p
 	.col-mn-12
 	{
 		float: left;
-		border: 1px solid red;
+		margin-bottom: 15px;
+		border:1px black solid;
+
 	}
   .col-mn-1 {
     width: 8.33%;
