--- a/module_2_site/css/Mdule2.css
+++ b/module_2_site/css/Mdule2.css
@@ -3,11 +3,10 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-
 }
 
-div#container {
-  background-color: #00FFFF;
+div#container
+{
   position: relative;
 }
 
@@ -31,13 +30,13 @@ h1{
 }
 p
 {
-  background-color: grey;
+  margin-right: auto;
   margin-left: auto;
-  width:90%;
   font-family: Comic Sans MS;
   color: black;
+  height:auto;
+  padding-top: 10px;
 }
-
 .row
 {
 	width: 100%;
@@ -47,13 +46,23 @@ p
 @media(min-width: 992px)
 {
 .col-lg-1, 
-.col-lg-2 ,
-.col-lg-3 ,
-.col-lg-4
+.col-lg-2,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5,
+.col-lg-6,
+.col-lg-7,
+.col-lg-8,
+.col-lg-9,
+.col-lg-10,
+.col-lg-11,
+.col-lg-12
 {
 	float: left;
-	margin-bottom: 15px;
 	border:1px black solid;
+	/*margin-bottom: 15px;*/
+	margin:20px;
+	background-color: grey;
 
 }
 .col-lg-1
@@ -102,15 +111,21 @@ p
 {
 
 .col-md-1, 
-.col-md-2 ,
-.col-md-3 ,
+.col-md-2,
+.col-md-3,
 .col-md-4,
 .col-md-5,
-.col-md-6
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-md-10,
+.col-md-11,
+.col-md-12
 {
 	float: left;
-	margin-bottom: 15px;
-	border:1px black solid;
+	margin:20px;
+	background-color: grey;
 }
 .col-md-1
 {
@@ -172,9 +187,8 @@ p
 	.col-mn-12
 	{
 		float: left;
-		margin-bottom: 15px;
-		border:1px black solid;
-
+		margin:20px;
+		background-color: grey;
 	}
   .col-mn-1 {
     width: 8.33%;
@@ -212,5 +226,4 @@ p
   .col-mn-12 {
     width: 100%;
   }
-
 }
