--- a/module_2_site/css/t.css
+++ b/module_2_site/css/t.css
@@ -45,25 +45,43 @@ p
 }
 /*Desktop Version*/
 @media(min-width: 992px)
- {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-    border: 1px solid black;
-    background-color: #A7A3A4;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
+{
+.col-lg-1, 
+.col-lg-2,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5,
+.col-lg-6,
+.col-lg-7,
+.col-lg-8,
+.col-lg-9,
+.col-lg-10,
+.col-lg-11,
+.col-lg-12
+{
+	float: left;
+	border:1px black solid;
+	/*margin-bottom: 15px;*/
+	margin:20px;
+	background-color: #A7A3A4;
+}
+.col-lg-1
+{
+	width: 8.33%;
+}
+.col-lg-2
+{
+	width: 16.66%;
+}
+.col-lg-3
+{
+	width: 25%;
+}
+.col-lg-4
+{
+	width: 33.33%;
+}
+ .col-lg-5 {
     width: 41.66%;
   }
   .col-lg-6 {
@@ -88,34 +106,52 @@ p
     width: 100%;
   }
 }
-
 /*Tablet Version*/
 @media(min-width:768px) and (max-width:991px)
 {
-.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-    border: 1px solid black;
-    background-color: #A7A3A4;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
+
+.col-md-1, 
+.col-md-2,
+.col-md-3,
+.col-md-4,
+.col-md-5,
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-md-10,
+.col-md-11,
+.col-md-12
+{
+	float: left;
+	margin:20px;
+	background-color: #A7A3A4;
+}
+.col-md-1
+{
+	width: 8.33%;
+
+}
+.col-md-2
+{
+	width: 16.66%;
+}
+.col-md-3
+{
+	width: 25%;
+}
+.col-md-4
+{
+	width: 33.33%;
+}
+  .col-md-5 
+  {
     width: 41.66%;
   }
   .col-md-6 {
     width: 50%;
   }
-  .col-md-7 {
+   .col-md-7 {
     width: 58.33%;
   }
   .col-md-8 {
@@ -137,11 +173,23 @@ p
 /*Mobile Version*/
 @media(max-width:767px)
 {
-.col-mn-1, .col-mn-2, .col-mn-3, .col-mn-4, .col-mn-5, .col-mn-6, .col-mn-7, .col-mn-8, .col-mn-9, .col-mn-10, .col-mn-11, .col-mn-12 {
-    float: left;
-      border: 1px solid black;
-    background-color: #A7A3A4;
-  }
+	.col-mn-1,
+	.col-mn-2,
+	.col-mn-3,
+	.col-mn-4,
+	.col-mn-5,
+	.col-mn-6,
+	.col-mn-7,
+	.col-mn-8,
+	.col-mn-9,
+	.col-mn-10,
+	.col-mn-11,
+	.col-mn-12
+	{
+		float: left;
+		margin:20px;
+		background-color: #A7A3A4;
+	}
   .col-mn-1 {
     width: 8.33%;
   }
