--- a/module_2_site/css/Mdule2.css
+++ b/module_2_site/css/Mdule2.css
@@ -10,10 +10,11 @@ div#container
   position: relative;
 }
 
-h1{
+h1
+{
     font-size: 300;
+    font-weight: bold;
 	text-align: center;
-	font-weight: bold;
 	margin-bottom: 15px;
 }
 .region
@@ -22,80 +23,38 @@ h1{
   width: 30%;
   font-family: Comic Sans MS;
   font-size: 15px;
+   font-weight: bold;
   position: relative;
   top: 0%;
   left:70%;
   border:1px black solid;
   text-align: center;
-  font-weight: bold;
+  margin-bottom: : 25px;
+  margin-right: -30px;
 }
 p
 {
-  margin-right: auto;
-  margin-left: auto;
   font-family: Comic Sans MS;
   color: black;
-  height:auto;
-  padding-top: 10px;
+  overflow: auto;
+  padding-left: 10px;
+  margin-left: 10px;
+  padding-bottom: 30px;
 }
 .row
 {
 	width: 100%;
 	position: relative;
+	/*overflow: auto;*/
 }
 /*Desktop Version*/
 @media(min-width: 992px)
  {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
     border: 1px solid black;
     background-color: #A7A3A4;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
-}
-
-/*Tablet Version*/
-@media(min-width:768px) and (max-width:991px)
-{
-.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-    border: 1px solid black;
-    background-color: #A7A3A4;
+    margin: 30px;
   }
   .col-md-1 {
     width: 8.33%;
@@ -134,48 +93,94 @@ p
     width: 100%;
   }
 }
+
+/*Tablet Version*/
+@media(min-width:768px) and (max-width:991px)
+{
+.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left;
+    border: 1px solid black;
+    background-color: #A7A3A4;
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
+}
 /*Mobile Version*/
 @media(max-width:767px)
 {
-.col-mn-1, .col-mn-2, .col-mn-3, .col-mn-4, .col-mn-5, .col-mn-6, .col-mn-7, .col-mn-8, .col-mn-9, .col-mn-10, .col-mn-11, .col-mn-12 {
+.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
     float: left;
       border: 1px solid black;
     background-color: #A7A3A4;
   }
-  .col-mn-1 {
+  .col-xs-1 {
     width: 8.33%;
   }
-  .col-mn-2 {
+  .col-xs-2 {
     width: 16.66%;
   }
-  .col-mn-3 {
+  .col-xs-3 {
     width: 25%;
   }
-  .col-mn-4 {
+  .col-xs-4 {
     width: 33.33%;
   }
-  .col-mn-5 {
+  .col-xs-5 {
     width: 41.66%;
   }
-  .col-mn-6 {
+  .col-xs-6 {
     width: 50%;
   }
-  .col-mn-7 {
+  .col-xs-7 {
     width: 58.33%;
   }
-  .col-mn-8 {
+  .col-xs-8 {
     width: 66.66%;
   }
-  .col-mn-9 {
+  .col-xs-9 {
     width: 74.99%;
   }
-  .col-mn-10 {
+  .col-xs-10 {
     width: 83.33%;
   }
-  .col-mn-11 {
+  .col-xs-11 {
     width: 91.66%;
   }
-  .col-mn-12 {
+  .col-xs-12 {
     width: 100%;
   }
 }
