--- a/module_2_site/css/Mdule2.css
+++ b/module_2_site/css/Mdule2.css
@@ -1,13 +1,6 @@
 *
 {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-div#container
-{
-  position: relative;
 }
 
 h1
@@ -17,44 +10,52 @@ h1
 	text-align: center;
 	margin-bottom: 15px;
 }
-.region
+.title
 {
-  height: 30%;
-  width: 30%;
-  font-family: Comic Sans MS;
-  font-size: 15px;
-   font-weight: bold;
-  position: relative;
-  top: 0%;
-  left:70%;
-  border:1px black solid;
+  border-bottom: 2px solid black;
+  border-left: 2px solid black;
+  font-weight: bold;
+  position: absolute;
+  right: 0;
+  width: 100px;
   text-align: center;
-  margin-bottom: : 25px;
-  margin-right: -30px;
+  padding: 10px 0 10px 0;
+  margin-top: 0;
 }
-p
+
+div.section 
 {
-  font-family: Comic Sans MS;
-  color: black;
-  overflow: auto;
-  padding-left: 10px;
-  margin-left: 10px;
-  padding-bottom: 30px;
+  background: #a9a9a9;
+  border: 2px solid black;
+  position: relative;
+  margin: 10px;
 }
 .row
 {
 	width: 100%;
-	position: relative;
-	/*overflow: auto;*/
+	padding: 0 10px 0 10px;
+}
+.description
+{
+	padding: 45px 50px 5px 10px;
+}
+#chicken
+{
+	background-color: #FA8CA7;
+}
+#beef
+{
+	background-color: #D91C4B;
+}
+#sushi
+{
+	background-color: #DBC038;
 }
 /*Desktop Version*/
 @media(min-width: 992px)
  {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid black;
-    background-color: #A7A3A4;
-    margin: 30px;
   }
   .col-md-1 {
     width: 8.33%;
@@ -99,8 +100,6 @@ p
 {
 .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 1px solid black;
-    background-color: #A7A3A4;
   }
   .col-sm-1 {
     width: 8.33%;
@@ -144,8 +143,6 @@ p
 {
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
     float: left;
-      border: 1px solid black;
-    background-color: #A7A3A4;
   }
   .col-xs-1 {
     width: 8.33%;
